# ComfyUI_DyPE

./: DyPE_node.py  README.md  __init__.py  model_loader_utils.py  pyproject.toml  run_dype_qwen.py
DyPE/: LICENSE  README.md  requirements.txt  run_dype.py
DyPE/flux/: pipeline_flux.py  transformer_flux.py
Flux/: pipeline_flux.py  pipeline_wrapper.py
Flux/FLUX.1-Krea-dev/transformer/: config.json
Z-Image/scheduler/: scheduler_config.json
Z-Image/transformer/: diffusion_pytorch_model.safetensors.index.json
example_workflows/: DyPE.json  dype.json  dype111.json
flux2/: pipeline_flux2_klein.py  transformer_flux2.py
flux2_klein/: latents_bn_mean.pt  latents_bn_std.pt
flux2_klein/9B/text_encoder/: model.safetensors.index.json
qwen/: lora_pipeline.py  pipeline_qwenimage.py  transformer_qwenimage.py
zimage/: pipeline_z_image.py  pipeline_z_image_.py  transformer_z_image.py  transformer_z_image_.py  transformer_z_image_a.py
